Added basic layout and file upload

--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exterminator</title>
-    <script src="/js/main.js" defer></script>
+    <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/main.js" defer></script>
 </head>
 
 <body>
-    <h1>Exterminator</h1>
+    <header>
+        <h1>Exterminator</h1>
+    </header>
+
+    <div class="toolbar">
+        <input class="file-input" type="file">
+    </div>
+
+    <div class="disasm">
+        <h2>Disassembly</h2>
+    </div>
+    <div class="sidebar">
+        <h2>Info</h2>
+        <ul class="info"></ul>
+    </div>
+
+    <footer>
+        Copyright &copy; 2020 Michel Fäh
+    </footer>
 </body>
 
 </html>
