--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
     <div class="disasm">
         <h2>Disassembly</h2>
+        <div class="disasm-container">
+            <p class="disasm-output"></p>
+        </div>
     </div>
     <div class="sidebar">
         <h2>Info</h2>
