Flags register can now be displayed

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
 
     <div class="registers">
         <h2>Registers</h2>
+        <h3>Flags</h3>
+        <table class="table">
+            <thead>
+                <th>Carry</th>
+                <th>Zero</th>
+                <th>Sign</th>
+            </thead>
+            <tbody class="flags-table-body"></tbody>
+        </table>
         <table class="table">
             <thead>
                 <th>Id</th>
