Added console output

--- a/index.html
+++ b/index.html
@@ -78,13 +78,20 @@
             </thead>
             <tbody class="flags-table-body"></tbody>
         </table>
-        <table class="table">
-            <thead>
-                <th>Id</th>
-                <th>Value</th>
-            </thead>
-            <tbody class="reg-table-body"></tbody>
-        </table>
+        <div class="registers-container">
+            <table class="table">
+                <thead>
+                    <th>Id</th>
+                    <th>Value</th>
+                </thead>
+                <tbody class="reg-table-body"></tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="console">
+        <h2>Console</h2>
+        <textarea class="console-output" readonly rows="10"></textarea>
     </div>
 </body>
 
