--- a/index.html
+++ b/index.html
@@ -27,53 +27,52 @@
 
     <main>
         <!-- Debugger -->
-        <div class="page page--active" data-page="debugger">
-            <div class="toolbar">
-                <button class="next-btn" disabled>Next</button>
-                <button class="cont-btn" disabled>Continue</button>
-                <button class="stop-btn" disabled>Stop</button>
-            </div>
-
-            <div class="disasm">
-                <h2>Disassembly</h2>
-                <div class="disasm-container">
-                    <div class="disasm-output">
+        <div class="page page--active page-debugger" data-page="debugger">
+            <div class="section sec-disasm">
+                <h2 class="section__title">Disassembly</h2>
+                <div class="section__body section__body--overflow">
+                    <div class="table disasm-output">
                         <!-- Generated assembly will be outputed here -->
                     </div>
                 </div>
             </div>
 
-            <div class="registers">
-                <h2>Registers</h2>
-                <h3>Flags</h3>
-                <table class="table">
-                    <thead>
-                        <th>Carry</th>
-                        <th>Zero</th>
-                        <th>Sign</th>
-                    </thead>
-                    <tbody class="flags-table-body"></tbody>
-                </table>
-                <div class="registers-container">
-                    <table class="register-table table">
+            <div class="section sec-registers">
+                <h2 class="section__title">Registers</h2>
+                <div class="section__body section__body--overflow">
+                    <h3>Flags</h3>
+                    <table class="table">
                         <thead>
-                            <th>Id</th>
-                            <th>Value</th>
-                            <th>Typed Value</th>
+                            <th>Carry</th>
+                            <th>Zero</th>
+                            <th>Sign</th>
                         </thead>
-                        <tbody class="reg-table-body"></tbody>
+                        <tbody class="flags-table-body"></tbody>
                     </table>
+                    <div class="registers-container">
+                        <table class="register-table table">
+                            <thead>
+                                <th>Id</th>
+                                <th>Value</th>
+                                <th>Typed Value</th>
+                            </thead>
+                            <tbody class="reg-table-body"></tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
-            <div class="console">
-                <h2>Console</h2>
+            <div class="section sec-console">
+                <h2 class="section__title">Console</h2>
                 <textarea class="console-output" readonly rows="10"></textarea>
+                <button class="next-btn" disabled>Next</button>
+                <button class="cont-btn" disabled>Continue</button>
+                <button class="stop-btn" disabled>Stop</button>
             </div>
         </div>
 
         <!-- File Info -->
-        <div class="page" data-page="file-info">
+        <div class="page page-file-info" data-page="file-info">
             <div class="sidebar">
                 <h2>Info</h2>
                 <h3>Header</h3>
@@ -120,8 +119,8 @@
 <template class="asm-line-template">
     <div class="asm-line">
         <button class="asm-line__breakpoint"></button>
-        <p class="asm-line__line-number mono">42</p>
-        <p class="asm-line__address mono">0x00000000000003F6</p>
+        <p class="asm-line__line-number mono"></p>
+        <p class="asm-line__address mono"></p>
         <p class="asm-line__content mono">copy i64 sp, bp</p>
     </div>
 </template>
