Added basic styles to the register view

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="section sec-registers">
                 <h2 class="section__title">Registers</h2>
-                <div class="section__body section__body--overflow">
+                <div class="flag-regs">
                     <h3>Flags</h3>
                     <table class="table">
                         <thead>
@@ -64,6 +64,8 @@
                         </thead>
                         <tbody class="flags-table-body"></tbody>
                     </table>
+                </div>
+                <div class="section__body section__body--overflow">
                     <div class="registers-container">
                         <table class="register-table table">
                             <thead>
