--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <!-- Debugger -->
         <div class="page page--active page-debugger" data-page="debugger">
             <div class="section section--simple sec-toolbar">
+                <button class="btn icon-btn close-btn" title="Close Debug Session">
+                    <img class="icon-btn__img" src="./res/icons/close_icon.svg" alt="Cross Icon">
+                </button>
                 <input class="btn upload-btn" type="file">
                 <!-- Once File API is available this upload button can be used -->
                 <!-- <button class="btn upload-btn">
