--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <!-- Debugger -->
         <div class="page page--active page-debugger" data-page="debugger">
             <div class="section section--simple sec-toolbar">
-                <button class="btn icon-btn close-btn" title="Close Debug Session">
+                <button class="btn icon-btn close-btn" title="Close Debug Session" disabled>
                     <img class="icon-btn__img" src="./res/icons/close_icon.svg" alt="Cross Icon">
                 </button>
-                <input class="btn upload-btn" type="file">
+                <input class="btn upload-btn" type="file" disabled>
                 <!-- Once File API is available this upload button can be used -->
                 <!-- <button class="btn upload-btn">
                             <img src="./res/icons/upload_icon.svg" alt="Upload icon" class="upload-btn__img">
