--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img class="icon-btn__img" src="./res/icons/start_icon.svg" alt="Play icon">
                 </button>
                 <button class="btn icon-btn next-btn" title="Next Line" disabled>
-                    <img class="icon-btn__img" src="./res/icons/arrow_right_icon.svg" alt="Arrow to the right">
+                    <img class="icon-btn__img" src="./res/icons/arrow_down.svg" alt="Arrow to the right">
                 </button>
                 <button class="btn icon-btn cont-btn" title="Continue" disabled>
                     <img class="icon-btn__img" src="./res/icons/continue_icon.svg" alt="Skip icon">
