--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./css/styles.css">
     <!-- Scripts -->
-    <script src="./js/App.js" type="module" defer></script>
+    <script src="./js/index.js" type="module" defer></script>
 </head>
 
 <body>
