Added open and close session buttons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <div class="page page--active page-debugger" data-page="debugger">
             <div class="section section--simple sec-toolbar">
                 <button class="btn icon-btn close-btn" title="Close Debug Session" disabled>
-                    <img class="icon-btn__img" src="./res/icons/close_icon.svg" alt="Cross Icon">
+                    <img class="icon-btn__img" src="./res/icons/close_sess_icon.svg" alt="No Connection Icon">
+                </button>
+                <button class="btn icon-btn open-btn" title="Open Debug Session" disabled>
+                    <img class="icon-btn__img" src="./res/icons/open_sess_icon.svg" alt="Connection Icon">
                 </button>
                 <input class="btn upload-btn" type="file" disabled>
                 <!-- Once File API is available this upload button can be used -->
