--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exterminator</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./res/favicon.svg">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./css/styles.css">
     <!-- Scripts -->
